; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netinet/extr_sctp_output.c_sctp_is_address_in_scope.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netinet/extr_sctp_output.c_sctp_is_address_in_scope.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sctp_ifa = type { i32, %struct.TYPE_5__, i64 }
%struct.TYPE_5__ = type { %struct.sockaddr_in6, %struct.sockaddr_in, %struct.TYPE_4__ }
%struct.sockaddr_in6 = type { i32 }
%struct.sockaddr_in = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_4__ = type { i32 }
%struct.sctp_scoping = type { i64, i32, i32, i32, i32 }

@SCTP_ADDR_IFA_UNUSEABLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sctp_is_address_in_scope(%struct.sctp_ifa* %0, %struct.sctp_scoping* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.sctp_ifa*, align 8
  %6 = alloca %struct.sctp_scoping*, align 8
  %7 = alloca i32, align 4
  store %struct.sctp_ifa* %0, %struct.sctp_ifa** %5, align 8
  store %struct.sctp_scoping* %1, %struct.sctp_scoping** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load %struct.sctp_scoping*, %struct.sctp_scoping** %6, align 8
  %9 = getelementptr inbounds %struct.sctp_scoping, %struct.sctp_scoping* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp eq i64 %10, 0
  br i1 %11, label %12, label %24

12:                                               ; preds = %3
  %13 = load %struct.sctp_ifa*, %struct.sctp_ifa** %5, align 8
  %14 = getelementptr inbounds %struct.sctp_ifa, %struct.sctp_ifa* %13, i32 0, i32 2
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %24

17:                                               ; preds = %12
  %18 = load %struct.sctp_ifa*, %struct.sctp_ifa** %5, align 8
  %19 = getelementptr inbounds %struct.sctp_ifa, %struct.sctp_ifa* %18, i32 0, i32 2
  %20 = load i64, i64* %19, align 8
  %21 = call i64 @SCTP_IFN_IS_IFT_LOOP(i64 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %17
  store i32 0, i32* %4, align 4
  br label %31

24:                                               ; preds = %17, %12, %3
  %25 = load %struct.sctp_ifa*, %struct.sctp_ifa** %5, align 8
  %26 = getelementptr inbounds %struct.sctp_ifa, %struct.sctp_ifa* %25, i32 0, i32 1
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 2
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  switch i32 %29, label %30 [
  ]

30:                                               ; preds = %24
  store i32 0, i32* %4, align 4
  br label %31

31:                                               ; preds = %30, %23
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local i64 @SCTP_IFN_IS_IFT_LOOP(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
